Add  <div> with a class=calculator is the calculators body. Inside that, we had an <input> element with type=text and class=display. This is our display screen. But we made it disabled so that users cannot enter the digits directly inside the <input>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
 <body>
 
+    <!-- calculator -->
+    <div class="calculator">
+
+        <!-- display -->
+        <input type="text" class="display" disabled>
+        <!-- keys -->
+        <div class="keys">
+
+        </div>
+
+    </div>
+    <!-- calculator body ends -->
+
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 
